Update styles to fix some alignment issues

--- a/app/src/MarketTable/ScalarMarketTable/marketTable.scss
+++ b/app/src/MarketTable/ScalarMarketTable/marketTable.scss
@@ -14,6 +14,10 @@
     padding-top: 1rem;
     width: 40vw;
 
+    @media #{$tablet-small-max} {
+      width: 100%;
+    }
+
     .header {
       display: block;
       width: 100%;
