--- a/app/src/Root/root.scss
+++ b/app/src/Root/root.scss
@@ -34,16 +34,17 @@
   height: 100%; // fallback
   height: calc(100% - 10.2rem);
   box-sizing: border-box;
-  padding: 4rem 8rem;
+  padding: 2rem 4rem;
+  justify-content: space-evenly;
 
   @media #{$tablet-small-max} {
+    padding: 0;
     flex-flow: column;
     height: auto;
   }
 
   .section {
     &-markets {
-      flex: 1;
       display: flex;
       width: auto;
       border: 0;
@@ -65,7 +66,6 @@
       height: 100%;
       width: 100%;
       max-width: 36rem;
-      flex: 1;
 
         @media #{$tablet-small-max} {
           border: 0;
